freest/test/prog/Invalid/Typing/ConsOutOfScope/ConsOutOfScope.fst
module ConsOutOfScope where

main = Foo